--- a/fisrt-project/src/index.css
+++ b/fisrt-project/src/index.css
@@ -70,3 +70,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.active{
+  font-weight: 900;
+  padding-bottom: 2px;
+  border-bottom: solid 2px #333;
+}
