--- a/fisrt-project/src/index.css
+++ b/fisrt-project/src/index.css
@@ -30,7 +30,6 @@ body {
   margin: 0;
   /* display: flex;
   place-items: center; */
-  min-width: 320px;
   min-height: 100vh;
 }
 
@@ -73,4 +72,8 @@ button:focus-visible {
 .active{
   background-color: #1abc9c;
   border-radius: 10px;
+}
+
+.row{
+  @apply flex flex-wrap py-5 flex-row
 }
