finishing contact styling

--- a/fisrt-project/src/index.css
+++ b/fisrt-project/src/index.css
@@ -83,3 +83,6 @@ button:focus-visible {
 .lines{
   @apply flex flex-row mt-3 items-center justify-center
 }
+input:focus{
+    box-shadow: none !important;
+}
