--- a/fisrt-project/src/index.css
+++ b/fisrt-project/src/index.css
@@ -86,3 +86,10 @@ button:focus-visible {
 input:focus{
     box-shadow: none !important;
 }
+.inner:hover .cover {
+  opacity: 0.7;
+}
+.cover{
+  opacity: 0;
+  transition: opacity 0.5s ;
+}
